# hs-git

./: .gitignore  git.cabal
Data/Git/: Monad.hs
Data/Git/Storage/: Object.hs
