cabal-version:      >=1.8
name:               git
version:            0.3.0
license:            BSD3
license-file:       LICENSE
copyright:          Vincent Hanquez <vincent@snarc.org>
maintainer:         Vincent Hanquez <vincent@snarc.org>
author:             Vincent Hanquez <vincent@snarc.org>
stability:          experimental
tested-with:        ghc ==7.8.4 ghc ==7.10.3 ghc ==8.0.2
homepage:           https://github.com/vincenthz/hs-git
synopsis:           Git operations in haskell
description:
    .
    A Haskell implementation of git storage operations, allowing users
    to manipulate git repositories (read and write).
    .
    This implementation is fully interoperable with the main C implementation.
    .
    This is strictly only manipulating the git store (what's inside the .git directory),
    and doesn't do anything with the index or your working directory files.
    .

category:           Development
build-type:         Simple
data-files:         README.md
extra-source-files: tests/*.hs

source-repository head
    type:     git
    location: https://github.com/vincenthz/hs-git

library
    exposed-modules:
        Data.Git
        Data.Git.Monad
        Data.Git.Types
        Data.Git.Storage
        Data.Git.Storage.PackIndex
        Data.Git.Storage.Pack
        Data.Git.Storage.Object
        Data.Git.Storage.Loose
        Data.Git.Named
        Data.Git.Delta
        Data.Git.Ref
        Data.Git.Revision
        Data.Git.Repository
        Data.Git.Diff
        Data.Git.Diff.Patience

    other-modules:
        Data.Git.Internal
        Data.Git.Imports
        Data.Git.OS
        Data.Git.Config
        Data.Git.Storage.FileReader
        Data.Git.Storage.FileWriter
        Data.Git.Storage.CacheFile
        Data.Git.Path
        Data.Git.Parser
        Data.Git.WorkTree

    ghc-options:     -Wall -fno-warn-unused-imports
    build-depends:
        base >=4 && <5,
        basement <0.1,
        bytestring >=0.9,
        containers,
        memory >=0.13 && <0.19,
        cryptonite >=0.22 && <0.31,
        vector <0.14,
        random <1.3,
        zlib <0.8,
        zlib-bindings >=0.1 && <0.2,
        hourglass >=0.2 && <0.3,
        unix-compat <0.8,
        utf8-string <1.1,
        system-filepath <0.5,
        system-fileio <0.4

test-suite test-unit
    type:           exitcode-stdio-1.0
    main-is:        Tests.hs
    hs-source-dirs: tests
    build-depends:
        base >=3 && <7,
        bytestring,
        tasty <1.6,
        tasty-quickcheck <0.12,
        hourglass <0.3,
        git

test-suite test-repository
    type:           exitcode-stdio-1.0
    main-is:        Repo.hs
    hs-source-dirs: tests
    other-modules:  Monad
    build-depends:
        base >=3 && <7,
        bytestring,
        tasty <1.6,
        tasty-quickcheck <0.12,
        hourglass <0.3,
        bytedump >=1.0 && <1.1,
        git
